# ambiqzephyr

./: .gitattributes  MAINTAINERS.yml  README.rst  west.yml
.github/workflows/: bsim-tests.yaml  clang.yaml  codecov.yaml  coding_guidelines.yml  compliance.yml  doc-build.yml  errno.yml  footprint-tracking.yml  license_check.yml  manifest.yml  pr_metadata_check.yml  ready-to-merge.yml  twister.yaml
doc/_scripts/: gen_boards_catalog.py  redirects.py
doc/ambiq/: How_to_Run_MCUBoot_Samples_and_Tests.rst  How_to_Run_Zephyr_MSPI_Samples_and_Tests.rst  How_to_Run_Zephyr_USB_Samples.rst  RELEASE_NOTES.rst  audio-samples-and-tests.rst  ble-samples-and-tests.rst  crypto-samples-and-tests.rst  display-samples-and-tests.rst  general-samples-and-tests.rst  mcuboot-samples-and-tests.rst  usb-samples-and-tests.rst
doc/releases/: migration-guide-3.7.rst  release-notes-3.7.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig.ambiq  adc_ambiq.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.amic_ambiq_audadc  Kconfig.dmic_ambiq_pdm  amic_ambiq_audadc.c  dmic_ambiq_pdm.c  dmic_nrfx_pdm.c
drivers/counter/: counter_ambiq_timer.c
drivers/crc/: Kconfig  (+3 more)
kernel/: timeout.c
samples/: README.rst
samples/drivers/audio/amic_thf/: CMakeLists.txt  prj.conf  sample.yaml
samples/drivers/audio/amic_thf/lib/: CMakeLists.txt  SensoryLib_VerInfo.txt  am_vos_thf.h  sensorytypes.h
samples/drivers/audio/amic_thf/src/: am_vos_thf.c  appAudio.c  main.c  thfft_alexa_enus_v3c_dsp_64kb_search_4_pc40.h
scripts/: requirements-build-test.txt
tests/: README.rst
(+902 files in other folders)
